RESOLVED FIXED269010
REGRESSION (271770@main): visionOS: Significant regression on MotionMark
https://bugs.webkit.org/show_bug.cgi?id=269010
Summary REGRESSION (271770@main): visionOS: Significant regression on MotionMark
Tim Horton
Reported 2024-02-08 12:24:50 PST
REGRESSION (271770@main): visionOS: Significant regression on MotionMark
Attachments
Tim Horton
Comment 1 2024-02-08 12:25:15 PST
Tim Horton
Comment 2 2024-02-08 13:03:20 PST
EWS
Comment 3 2024-02-08 15:32:34 PST
Committed 274319@main (03a60be8929d): <https://commits.webkit.org/274319@main> Reviewed commits have been landed. Closing PR #24093 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.